# zerocopy-server

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md  config.toml
benches/: latency.rs  throughput.rs
contrib/systemd/: veil.service  zerocopy-server.service
examples/wasm-filters/: README.md
examples/wasm-filters/cache-filter/: Cargo.toml  README.md
examples/wasm-filters/cache-filter/src/: lib.rs  memcached.rs  redis.rs
examples/wasm-filters/header-filter/: Cargo.toml  README.md
examples/wasm-filters/header-filter/src/: lib.rs
examples/wasm-filters/jwt-filter/: Cargo.toml  README.md
examples/wasm-filters/jwt-filter/src/: crypto.rs  jwks.rs  lib.rs
examples/wasm-filters/jwt-filter/tests/: jwks_cache_test.rs  jwt_validation_test.rs
examples/wasm-filters/jwt-filter/tests/common/: mod.rs
examples/wasm-filters/lua-filter/: Cargo.toml  README.md  sample_config.json
examples/wasm-filters/lua-filter/src/: lib.rs
examples/wasm-filters/lua-filter/src/lua/: ast.rs  interpreter.rs  lexer.rs  mod.rs  parser.rs  pattern.rs  stdlib.rs  value.rs
examples/wasm-filters/lua-filter/tests/: interpreter_test.rs  lexer_test.rs  pattern_test.rs
examples/wasm-filters/waf-filter/: README.md
examples/wasm-filters/waf-filter/src/: crs_level1.rs  crs_level2.rs  crs_level3.rs  lib.rs  rules.rs
src/: http3_server.rs  ktls.rs  ktls_rustls.rs  main.rs  s2n_tls.rs  security.rs  simple_tls.rs
src/buffering/: config.rs  handler.rs  mod.rs
src/cache/: config.rs  disk.rs  entry.rs  file_cache.rs  index.rs  key.rs  manager.rs  memory.rs  mod.rs  policy.rs  revalidation.rs
src/http2/: connection.rs  error.rs  mod.rs  settings.rs  stream.rs
src/http2/frame/: decoder.rs  encoder.rs  mod.rs  types.rs
src/http2/hpack/: decoder.rs  encoder.rs  huffman.rs  mod.rs  table.rs
src/http3/: connection.rs  error.rs  frame.rs  mod.rs
src/http3/qpack/: decoder.rs  encoder.rs  mod.rs  table.rs
src/http3/quic/: connection.rs  crypto.rs  mod.rs  packet.rs  stream.rs
src/protocol/: mod.rs  negotiation.rs
src/udp/: mod.rs  socket.rs
src/wasm/: engine.rs  integration.rs  mod.rs  persistent_context.rs  registry.rs  tests.rs  types.rs
src/wasm/host/: buffers.rs  foreign.rs  headers.rs  http_call.rs  logging.rs  metrics.rs  properties.rs  shared_data.rs  stream.rs
tests/: e2e_setup.sh  e2e_tests.rs  integration_tests.rs  run_bench.sh
tests/common/: grpc_client.rs  http1_client.rs  http3_client.rs  mod.rs
tests/fixtures/: .gitkeep
tests/fixtures/backend1/: .gitkeep
tests/fixtures/backend2/: .gitkeep
