[package]
name = "veil"
version = "0.3.0"
edition = "2021"
description = "High-performance reverse proxy server using io_uring and rustls"
license = "Apache-2.0"
authors = ["aofusa"]

[features]
default = []

# kTLS（Kernel TLS）サポート
# rustls + ktls2 を使用し、kTLS によるカーネルオフロードをサポート
# 
# 要件:
#   - Linux 5.15+ カーネル
#   - `modprobe tls` でkTLSモジュールをロード済み
#   - AES-GCM暗号スイートの使用
# 
# ビルド方法: cargo build --features ktls
ktls = ["ktls2"]

# HTTP/2 サポート
# ALPN ネゴシエーションにより HTTP/2 (h2) を使用
# kTLS と併用可能: cargo build --features "ktls,http2"
http2 = []

# HTTP/3 サポート (QUIC ベース)
# UDP/QUIC を使用した HTTP/3 プロトコル
# 注意: HTTP/3 は UDP ベースのため kTLS は使用不可
# GSO/GRO による高パフォーマンス UDP 処理
http3 = ["quiche"]

# 全プロトコルサポート
all-protocols = ["http2", "http3"]

[dependencies]
monoio = { version = "0.2.2", features = ["poll-io"] }
# rustls を直接使用（ハンドシェイク後に kTLS へオフロード）
rustls = { version = "0.23", features = ["tls12", "ring"] }
webpki-roots = "0.26"
rustls-pemfile = "2.1.3"
libc = "0.2"
mimalloc = { version = "0.1.43", default-features = false }
# Huge Pages (Large OS Pages) 設定用
# mimallocの低レベルAPIを使用してLarge OS Pagesを有効化
# extendedフィーチャーでmi_option_set等のAPIを使用可能に
libmimalloc-sys = { version = "0.1", features = ["extended"] }
toml = "0.8.19"
serde = { version = "1.0.209", features = ["derive"] }
httparse = "1.9.4"
memchr = "2.7"
bytes = "1.7.1"
anyhow = "1.0.89"
mime_guess = "2.0.5"
num_cpus = "1.17.0"
ftlog = "0.2"
time = "0.3"
hostname = "0.4"
itoa = "1.0"
ctrlc = "3.4"

# CPUアフィニティ設定
# 各ワーカースレッドを特定のCPUコアに固定し、キャッシュ効率を向上
core_affinity = "0.8"

# ktls2（オプション）
# rustls からシークレットを取得して kTLS を有効化
ktls2 = { version = "6.0", optional = true }

# 高速ルーティング（Radix Tree）
# O(n)線形探索からO(log n)に改善
matchit = "0.8"

# 設定のホットリロード対応
# ロックフリーな設定更新を実現
arc-swap = "1.7"
once_cell = "1.20"
signal-hook = "0.3.18"

# Prometheusメトリクス対応
# リクエスト数、レイテンシ、エラー率などを計測・エクスポート
prometheus = "0.13"
clap = { version = "4.5.53", features = ["derive"] }

# HTTP/3 用 QUIC 実装（Cloudflare quiche）
# 実績のある QUIC/HTTP/3 実装を使用
quiche = { version = "0.23", optional = true }

# ring: 暗号化ライブラリ
# - rustls の依存として使用（TLS 1.2/1.3）
# - quiche (HTTP/3) でも使用（乱数生成、暗号化）
ring = "0.17"

# nix: Unix システムコール用のRustラッパー
# - uname() でカーネルバージョン取得
# - セキュリティモジュールで使用
# - sched: namespace分離 (unshare)
# - mount: バインドマウント
# - hostname: ホスト名設定
nix = { version = "0.29", features = ["uio", "process", "feature", "sched", "mount", "hostname"] }

# ====================
# レスポンス圧縮ライブラリ
# ====================
# Gzip圧縮（flate2）
# - ストリーミング圧縮対応
# - 圧縮レベル1-9をサポート
flate2 = "1.0"

# Brotli圧縮
# - 高圧縮率（Gzipより10-20%効率的）
# - ストリーミング圧縮対応
# - 圧縮レベル0-11をサポート
brotli = "7.0"

# Zstandard (zstd) 圧縮
# - 高速かつ高圧縮率（Gzipより高速で高圧縮）
# - ストリーミング圧縮対応
# - 圧縮レベル1-22をサポート
zstd = "0.13"

# ====================
# プロキシキャッシュ・バッファリング制御
# ====================
# ロックフリー並行ハッシュマップ（キャッシュインデックス用）
# - 高並行性アクセスに最適化
# - スレッドセーフな挿入・削除・検索
dashmap = "6.1"

# LRU キャッシュ（メモリキャッシュのeviction用）
# - O(1)の挿入・検索・削除
# - 最大容量制限とLRU eviction
lru = "0.12"

# 高速ハッシュ関数（キャッシュキー生成用）
# - xxHash3: 非常に高速なハッシュ関数
# - キャッシュキーの生成とファイルパス変換に使用
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# glob パターンマッチング（キャッシュバイパス設定用）
# - シンプルなワイルドカードパターン
# - 正規表現より高速
glob = "0.3"

[dev-dependencies]
# テスト用一時ディレクトリ
tempfile = "3.10"

# TLS証明書生成（テスト用自己署名証明書）
rcgen = "0.13"

# ベンチマーク用
criterion = { version = "0.5", features = ["html_reports"] }

# システム情報取得（リソース使用量測定）
sysinfo = "0.32"

# E2Eテスト用TLS接続（rustlsを使用、メイン依存関係と一致）
# rustls と webpki-roots は既にメインの依存関係に含まれているため追加不要

# ベンチマーク用依存関係
base64 = "0.22"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "http2"
harness = false

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "tls"
harness = false

[[bench]]
name = "connection_pool"
harness = false

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "load_balancing"
harness = false

[[bench]]
name = "http3"
harness = false

[[bench]]
name = "websocket"
harness = false

[[bench]]
name = "memory"
harness = false
