[package]
name = "veil"
version = "0.3.0"
edition = "2021"
description = "High-performance reverse proxy server using io_uring and rustls"
license = "Apache-2.0"
authors = ["aofusa"]

[features]
default = []

# kTLS（Kernel TLS）サポート
# 自前実装の ktls モジュールによる kTLS カーネルオフロードサポート
# 
# 要件:
#   - Linux 5.15+ カーネル
#   - `modprobe tls` でkTLSモジュールをロード済み
#   - AES-GCM暗号スイートの使用
# 
# ビルド方法: cargo build --features ktls
ktls = []

# HTTP/2 サポート
# ALPN ネゴシエーションにより HTTP/2 (h2) を使用
# kTLS と併用可能: cargo build --features "ktls,http2"
http2 = []

# HTTP/3 サポート (QUIC ベース)
# UDP/QUIC を使用した HTTP/3 プロトコル
# 注意: HTTP/3 は UDP ベースのため kTLS は使用不可
# GSO/GRO による高パフォーマンス UDP 処理
http3 = ["quiche"]

# WASM Extension サポート (Proxy-Wasm v0.2.1)
# Wasmtime ランタイムによる WebAssembly フィルタ
# AOT コンパイル、Pooling Allocator、InstancePre 使用
wasm = ["wasmtime"]

# 全プロトコルサポート
all-protocols = ["http2", "http3"]

# gRPC サポート (HTTP/2 ベース)
# gRPC ワイヤプロトコル（framing, headers, trailers）を実装
# Protobuf 解析には prost を使用（オプション）
# ビルド方法: cargo build --features grpc
grpc = ["prost"]

# gRPC-Web サポート
# ブラウザ互換の gRPC-Web プロトコル変換
# CORS 設定は config.toml でルート毎に設定可能
grpc-web = ["grpc"]

# gRPC 全機能サポート
# HTTP/3 上の gRPC は http3 feature に依存
grpc-full = ["grpc", "grpc-web", "http3"]

[dependencies]
monoio = { version = "0.2.4" }
# rustls を直接使用（ハンドシェイク後に kTLS へオフロード）
rustls = { version = "0.23.35", features = ["tls12", "aws_lc_rs"] }
aws-lc-rs = "1.15.2"
webpki-roots = "1.0.4"
rustls-pki-types = "1.13.2"
libc = "0.2.178"
mimalloc = { version = "0.1.48", default-features = false }
# Huge Pages (Large OS Pages) 設定用
# mimallocの低レベルAPIを使用してLarge OS Pagesを有効化
# extendedフィーチャーでmi_option_set等のAPIを使用可能に
libmimalloc-sys = { version = "0.1.44", features = ["extended"] }
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
httparse = "1.10.1"
memchr = "2.7.6"
bytes = "1.11.0"
anyhow = "1.0.100"
mime_guess = "2.0.5"
num_cpus = "1.17.0"
ftlog = "0.2.15"
time = "0.3.44"
hostname = "0.4.2"
itoa = "1.0.17"
ctrlc = "3.5.1"

# CPUアフィニティ設定
# 各ワーカースレッドを特定のCPUコアに固定し、キャッシュ効率を向上
core_affinity = "0.8.3"



# 高速ルーティング（Radix Tree）
# O(n)線形探索からO(log n)に改善
matchit = "0.9.1"

# 設定のホットリロード対応
# ロックフリーな設定更新を実現
arc-swap = "1.8.0"
once_cell = "1.21.3"
signal-hook = "0.4.1"

# Prometheusメトリクス対応
# リクエスト数、レイテンシ、エラー率などを計測・エクスポート
prometheus = "0.14.0"
clap = { version = "4.5.53", features = ["derive"] }

# HTTP/3 用 QUIC 実装（Cloudflare quiche）
# 実績のある QUIC/HTTP/3 実装を使用
quiche = { version = "0.24.6", optional = true }

# Wasmtime: WebAssembly ランタイム (Proxy-Wasm v0.2.1)
# - pooling-allocator: 高速インスタンス化
# - cranelift: AOT コンパイル
# - component-model: WASI対応
wasmtime = { version = "40.0.0", optional = true, features = ["pooling-allocator", "cranelift"] }

# Protobuf: gRPC メッセージのシリアライズ/デシリアライズ
# prost は gRPC feature 有効時のみ使用
prost = { version = "0.13", optional = true }

# nix: Unix システムコール用のRustラッパー
# - uname() でカーネルバージョン取得
# - セキュリティモジュールで使用
# - sched: namespace分離 (unshare)
# - mount: バインドマウント
# - hostname: ホスト名設定
nix = { version = "0.30.1", features = ["uio", "process", "feature", "sched", "mount", "hostname"] }

# ====================
# レスポンス圧縮ライブラリ
# ====================
# Gzip圧縮（flate2）
# - ストリーミング圧縮対応
# - 圧縮レベル1-9をサポート
flate2 = "1.1.5"

# Brotli圧縮
# - 高圧縮率（Gzipより10-20%効率的）
# - ストリーミング圧縮対応
# - 圧縮レベル0-11をサポート
brotli = "8.0.2"

# Zstandard (zstd) 圧縮
# - 高速かつ高圧縮率（Gzipより高速で高圧縮）
# - ストリーミング圧縮対応
# - 圧縮レベル1-22をサポート
zstd = "0.13.3"

# ====================
# プロキシキャッシュ・バッファリング制御
# ====================
# ロックフリー並行ハッシュマップ（キャッシュインデックス用）
# - 高並行性アクセスに最適化
# - スレッドセーフな挿入・削除・検索
dashmap = "6.1.0"

# LRU キャッシュ（メモリキャッシュのeviction用）
# - O(1)の挿入・検索・削除
# - 最大容量制限とLRU eviction
lru = "0.16.2"

# 高速ハッシュ関数（キャッシュキー生成用）
# - xxHash3: 非常に高速なハッシュ関数
# - キャッシュキーの生成とファイルパス変換に使用
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

# glob パターンマッチング（キャッシュバイパス設定用）
# - シンプルなワイルドカードパターン
# - 正規表現より高速
glob = "0.3.3"

[dev-dependencies]
# テスト用一時ディレクトリ
tempfile = "3.24.0"

# TLS証明書生成（テスト用自己署名証明書）
rcgen = { version = "0.14.6", default-features = false, features = ["crypto", "pem", "aws_lc_rs"] }

# ベンチマーク用
criterion = { version = "0.8.1", features = ["html_reports"] }

# システム情報取得（リソース使用量測定）
sysinfo = "0.37.2"

# E2Eテスト用TLS接続（rustlsを使用、メイン依存関係と一致）
# rustls と webpki-roots は既にメインの依存関係に含まれているため追加不要

# ベンチマーク用依存関係
base64 = "0.22.1"

# HTTP/3 E2Eテスト用（quicheクライアント）
# 注意: quicheは既にメインの依存関係にoptionalとして追加されているため、
# dev-dependenciesでは通常の依存関係として追加（http3 featureが有効な場合のみ使用）

# ========================================
# 新規追加: HTTP/2・HTTP/3・gRPC テスト基盤
# ========================================

# 非同期ランタイム（テスト専用）
# 注意: 本体はmonoioを使用するが、テストクライアントはtokioを使用
tokio = { version = "1.42", features = ["full", "test-util"] }

# HTTP/2クライアント
h2 = "0.4"
tokio-rustls = "0.26"
http = "1.2"
# HTTP/1.1 + HTTP/2クライアント
hyper = { version = "1.6", features = ["client", "http1", "http2"] }
hyper-rustls = { version = "0.27", features = ["http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }

# gRPCクライアント（HTTP/2ベース）
# tls-aws-lcはaws-lc-rsを使用したTLS、channelはクライアント機能
tonic = { version = "0.14", features = ["tls-aws-lc", "channel"] }
tonic-build = "0.14"

# HTTP/3クライアント（QUIC/quinn + h3）
h3 = "0.0.8"
quinn = { version = "0.11", features = ["runtime-tokio", "rustls"] }
h3-quinn = "0.0.10"

# gRPC over HTTP/3（実験的）
# 注意: 実験的ステータスのため、APIが変更される可能性あり
tonic-h3 = "0.0.5"

# 共通ユーティリティ
futures = "0.3"
http-body-util = "0.1"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "http2"
harness = false

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "tls"
harness = false

[[bench]]
name = "connection_pool"
harness = false

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "load_balancing"
harness = false

[[bench]]
name = "http3"
harness = false

[[bench]]
name = "websocket"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "routing"
harness = false
