[package]
name = "cache-filter"
version = "0.1.0"
edition = "2021"
authors = ["aofusa"]
description = "Distributed Cache Proxy-Wasm Filter with Redis and Memcached support"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
base64 = "0.21"

[profile.release]
opt-level = "s"
lto = true

[workspace]
