[package]
name = "header-filter"
version = "0.1.0"
edition = "2021"
description = "Sample Proxy-Wasm header filter for veil-proxy"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
log = "0.4"

[profile.release]
lto = true
opt-level = "s"

# Exclude from parent workspace
[workspace]
