[package]
name = "jwt-filter"
version = "0.1.0"
edition = "2021"
authors = ["aofusa"]
description = "JWT Authentication Proxy-Wasm Filter with JWKS Support"
license = "Apache-2.0"

[lib]
name = "jwt_filter"
crate-type = ["cdylib", "rlib"]

[dependencies]
proxy-wasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
log = "0.4"
hmac = "0.12"
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
once_cell = "1.19"

[profile.release]
opt-level = "s"
lto = true

[workspace]
