[package]
name = "lua-filter"
version = "0.1.0"
edition = "2021"
description = "Custom Lua interpreter Proxy-Wasm filter (pure Rust, no external Lua libraries)"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "s"

[workspace]
